--- a/src/com/fmi/pao/generateByAlphabet.form
+++ b/src/com/fmi/pao/generateByAlphabet.form
@@ -16,14 +16,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="d9424" class="javax.swing.JScrollPane" binding="alphInput">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="ced78" class="javax.swing.JLabel" binding="infoLabel1">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -38,6 +30,19 @@
             </constraints>
             <properties/>
           </component>
+          <scrollpane id="431a" binding="alphabetSP">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="3048a" class="javax.swing.JTextPane" binding="alphabetTP">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="fdac0" binding="lengthContainer" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -48,14 +53,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="76b63" class="javax.swing.JScrollPane" binding="lengthInput">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="2284d" class="javax.swing.JLabel" binding="infoLabel2">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -76,6 +73,19 @@
             </constraints>
             <properties/>
           </component>
+          <scrollpane id="b0eb1" binding="lengthSP">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="2b98f" class="javax.swing.JTextPane" binding="lengthTP">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <component id="8454f" class="javax.swing.JButton" binding="generateBtn">
@@ -102,14 +112,6 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="13897" class="javax.swing.JScrollPane" binding="genText">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="45323" class="javax.swing.JButton" binding="browseBtn">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -132,6 +134,19 @@
             </constraints>
             <properties/>
           </component>
+          <scrollpane id="2d694" binding="generatedTextSP">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="97504" class="javax.swing.JTextPane" binding="generatedTextTP">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
