modified file-based generator
modified file-based generator

--- a/src/com/fmi/pao/generateByAlphabet.form
+++ b/src/com/fmi/pao/generateByAlphabet.form
@@ -24,12 +24,6 @@
               <text value="Label"/>
             </properties>
           </component>
-          <component id="9e1f8" class="javax.swing.JScrollBar" binding="scrollBar3" default-binding="true">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <scrollpane id="431a" binding="alphabetSP">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -43,6 +37,12 @@
               </component>
             </children>
           </scrollpane>
+          <component id="3a145" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <grid id="fdac0" binding="lengthContainer" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -63,13 +63,7 @@
           </component>
           <component id="b2c7b" class="javax.swing.JComboBox" binding="lengthTypeSelector">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="1de61" class="javax.swing.JScrollBar" binding="scrollBar2" default-binding="true">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
@@ -86,6 +80,12 @@
               </component>
             </children>
           </scrollpane>
+          <component id="77ced" class="javax.swing.JScrollBar" binding="scrollBar2" default-binding="true">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <component id="8454f" class="javax.swing.JButton" binding="generateBtn">
@@ -128,12 +128,6 @@
               <text value="Label"/>
             </properties>
           </component>
-          <component id="62444" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <scrollpane id="2d694" binding="generatedTextSP">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -147,6 +141,12 @@
               </component>
             </children>
           </scrollpane>
+          <component id="d3c59" class="javax.swing.JScrollBar" binding="scrollBar3" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
     </children>
